# wasm_pdf

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  compose.production.yml  deny.toml  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
apps/backend/: Cargo.toml
apps/backend/migrations/: 202607140001_initial_identity.sql  202607140002_rate_limits.sql  202607140003_passkey_ceremonies.sql  202607140004_email_delivery.sql  202607140005_retention_indexes.sql
apps/backend/src/: config.rs  database.rs  email.rs  http.rs  lib.rs  main.rs  maintenance.rs  metrics.rs  observability.rs
apps/backend/src/auth/: crypto.rs  error.rs  http.rs  lifecycle.rs  mod.rs  model.rs  passkey.rs  rate_limit.rs  recovery.rs  service.rs
apps/frontend/: Cargo.toml  Trunk.toml  index.html  styles.css
apps/frontend/src/: auth.rs  main.rs  worker.rs
apps/pdf-worker/: Cargo.toml  README.md
apps/pdf-worker/js/: worker.js
apps/pdf-worker/src/: lib.rs  protocol.rs
crates/pdf-engine/: Cargo.toml
crates/pdf-engine/src/: crop.rs  error.rs  extract_text.rs  flatten.rs  lib.rs  merge.rs  page_tree.rs  reorder.rs  rotate.rs  split.rs  watermark.rs
crates/pdf-engine/tests/: crop.rs  extract_text.rs  flatten.rs  merge_split.rs  reorder.rs  rotate.rs  watermark.rs
crates/pdf-engine/tests/common/: mod.rs
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: architecture.md  authentication.md  deployment.md  disaster-recovery.md  roadmap.md  security-audit-2026-07-14.md
infra/alloy/: config.alloy
infra/caddy/: Caddyfile
infra/examples/: backup.env.example  deployment.env.example
infra/grafana/dashboards/: pdf-editor-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/loki/: loki-config.yml
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
infra/promtail/: promtail-config.yml
infra/systemd/: wasm-pdf-backup.service  wasm-pdf-backup.timer
scripts/: backup-postgres.sh  deploy-vps.sh  render-nginx-csp.sh  restore-postgres.sh  test-database-security.sh  verify-postgres-backup.sh
