[workspace]
resolver = "2"
members = [
    "apps/backend",
    "apps/frontend",
    "apps/pdf-worker",
    "crates/pdf-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/Alexandru2984/wasm_pdf"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
hmac = "0.13.0"
js-sys = "0.3.83"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
lopdf = { version = "0.44.0", default-features = false, features = ["wasm_js"] }
pdf-engine = { path = "crates/pdf-engine" }
prometheus-client = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio", "tls-rustls-ring", "time", "uuid"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["catch-panic", "cors", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.20.0", features = ["js", "serde", "v4"] }
wasm-bindgen = "0.2.106"
web-sys = "0.3.83"
yew = { version = "0.23.0", features = ["csr"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
