[package]
name = "backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Low-latency API and integration backend for the PDF editor"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

