[package]
name = "backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Low-latency API and integration backend for the PDF editor"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
email_address = { version = "0.2.9", default-features = false }
getrandom.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
lettre.workspace = true
prometheus-client.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
tower.workspace = true
