[package]
name = "pdf-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Target-agnostic PDF operations shared by the browser worker and native tests"

[dependencies]
lopdf.workspace = true
thiserror.workspace = true

[lints]
workspace = true

