[package]
name = "pdf-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Target-agnostic PDF operations shared by the browser worker and native tests"

[dependencies]
lopdf.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
